项目优化，tree-mind组件更新

--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -1,4 +1,4 @@
-$namespace: 'v2';
-$element-separator: '__';
-$modifier-separator: '--';
-$state-prefix: 'is-';
+$namespace: "vp";
+$element-separator: "__";
+$modifier-separator: "--";
+$state-prefix: "is-";
